--- a/KWT_configs/kwt1_baseline_mean_config.yaml
+++ b/KWT_configs/kwt1_baseline_mean_config.yaml
@@ -9,8 +9,8 @@ label_map: speech_commands_v0.02/_generated/label_map.json
 
 exp:
     wandb: False
-    wandb_api_key: 
-    proj_name: data2vec_KWS
+    wandb_api_key:
+    proj_name: ml_mid
     exp_dir: ./runs
     exp_name: kwt1_baseline_mean
     device: auto
@@ -21,7 +21,7 @@ exp:
     n_workers: 1
     pin_memory: True
     cache: 0 # 0 -> no cache | 1 -> cache wavs | 2 -> cache specs; stops wav augments
-    
+
 
 hparams:
     seed: 0
@@ -30,23 +30,23 @@ hparams:
     l_smooth: 0.1
 
     audio:
-        sr: 16000
+        sr: 16000 #sample
         n_mfcc: 40
         kwargs:
-            n_mels: 80
+            n_mels: 40
             n_fft: 480
             win_length: 480
             hop_length: 160
             center: False
             fmax: 7600
             fmin: 20
-    
+
     model:
         name: # if name is provided below settings will be ignored during model creation
         input_res: [40, 98]
         patch_res: [40, 1]
         num_classes: 35
-        mlp_dim: 256
+        mlp_dim: 256 #number of mlp
         dim: 64
         heads: 1
         depth: 12
@@ -58,9 +58,9 @@ hparams:
     optimizer:
         opt_type: adamw
         opt_kwargs:
-          lr: 0.001
-          weight_decay: 0.1
-    
+          lr: 0.001 #learning rate
+          weight_decay: 0.1 #use for regularization
+
     scheduler:
         n_warmup: 10
         max_epochs: 140
@@ -70,7 +70,7 @@ hparams:
             #resample:
             #r_min: 0.85
             #r_max: 1.15
-        
+
             #time_shift:
             #s_min: -0.1
             #s_max: 0.1
