--- a/KWT_configs/kwt1_baseline_config.yaml
+++ b/KWT_configs/kwt1_baseline_config.yaml
@@ -8,7 +8,7 @@ test_list_file: speech_commands_v0.02/_generated/testing_list.txt
 label_map: speech_commands_v0.02/_generated/label_map.json
 
 exp:
-    wandb: True
+    wandb: False
     wandb_api_key: 
     proj_name: ml_mid
     exp_dir: ./runs
